Reverted back the base path.
